# smart-home

./: .gitignore  README.md  fdsf  package.json
backend/: Cargo.toml  README.md
backend/migrations/: 20250808185456_init_users.sql  20250815175318_init_houses.sql  20250815175514_init_user_houses.sql  20250815175552_init_rooms.sql  20250821000000_init_devices.sql  20250827173414_init_device_metrics.sql  20250907175043_init_api_tokens.sql
backend/scripts/: coverage.sh  reset_db.bat  reset_db.sh  test.sh
backend/src/: api_doc.rs  config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  services.rs
backend/src/handlers/: api_tokens.rs  auth.rs  device_metrics.rs  devices.rs  houses.rs  rooms.rs  users.rs
backend/src/middlewares/: auth.rs  validator.rs
backend/src/models/: api_tokens.rs  auth.rs  common.rs  device_metrics.rs  devices.rs  houses.rs  rooms.rs  user_houses.rs  users.rs
backend/src/repositories/: api_tokens_repository.rs  device_metrics_repository.rs  device_repository.rs  house_repository.rs  mod.rs  rooms_repository.rs  user_houses_repository.rs  user_repository.rs
backend/src/routes/: api_tokens.rs  auth.rs  device_metrics.rs  devices.rs  houses.rs  rooms.rs  users.rs
backend/src/services/: access_control_service.rs  api_tokens.rs  auth.rs  device.rs  device_metrics.rs  house.rs  rooms.rs  user_service.rs
backend/src/tests/: api_token_integration_tests.rs  device_integration_tests.rs  device_metrics_integration_tests.rs  integration_tests.rs  mod.rs  room_integration_tests.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/Authorized/: index.tsx
frontend/src/components/InputCheckbox/: index.tsx
frontend/src/components/InputTel/: index.tsx  styles.module.scss
frontend/src/components/InputText/: index.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/useGetUser/: index.ts  utils.ts
frontend/src/hooks/useLocalStorage/: index.tsx
frontend/src/pages/SignIn/: index.tsx  styles.module.scss  (+1 more)
frontend/src/services/: authService.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: localStorage.ts  math.ts
(+26 files in other folders)
