[package]
name = "smart-home-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "smart_home_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
axum-test = "17.3.0"
async-trait = "0.1.81"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
    "macros",
] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.142"

[dev-dependencies]
tokio-test = "0.4.4"
