[package]
name = "smart-home-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "smart_home_backend"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
async-trait = "0.1.89"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "migrate",
    "macros",
] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.143"
pretty_assertions = "1.4.1"
envy = "0.4.2"
anyhow = "1.0.99"
thiserror = "2.0.16"
tower-http = { version = "0.6.6", features = ["cors"] }
rand = "0.9.2"

[dev-dependencies]
tokio-test = "0.4.4"
axum-test = "18.1.0"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
